# tauri-template

./: .env.example  .version-lock  AGENTS.md  CHANGELOG.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
.agent/rules/: tauri-titlebar.md
.github/workflows/: build.yml
public/: splashscreen.html
scripts/: rename-app.js  version-upgrade.js
src/: App.css  App.tsx  app.css  app.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: git.rs  mod.rs  splash.rs
src/components/: Footer.tsx  Layout.tsx  footer.tsx  layout.tsx  theme-switch.tsx  theme-toggle-listener.tsx  theme-toggle.tsx
src/components/common/: app-commands.tsx  app-header.tsx  app-menubar.tsx
src/components/icons/: cursor.tsx
src/components/providers/: command-provider.tsx  theme-provider.tsx
src/components/ui/: command.tsx
src/components/updater/: version-display.tsx
src/features/Titlebar/: MacOSButtons.tsx  MacOSTitlebar.tsx  WindowsButtons.tsx  WindowsTitlebar.tsx  index.tsx
src/features/titlebar/: index.tsx  mac-os-titlebar.tsx  titlebar-container.tsx  (+1 more)
src/hooks/: use-background.ts  use-command-shortcut.ts  use-debounce.ts  use-file-opener.ts  use-register-command.ts  use-tauri-store-sync.ts
src/lib/: command-registry.ts  commands.ts  git-utils.ts  update-check.ts
src/pages/: Empty.tsx  Home.tsx  empty.tsx  home.tsx  settings.tsx
src/store/: cursor.ts  settings.ts
src/stores/: dummy.ts
(+1 files in other folders)
